feat: change to system theme (better one)

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -40,23 +40,23 @@ const { title, description, image } = Astro.props
 
   <script is:inline>
     const theme = (() => {
-      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        return 'dark';
-      }
       if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
         return localStorage.getItem('theme');
       }
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        return 'dark';
+      }
         return 'light';
     })();
- 
-    if(theme === 'dark' || window.matchMedia('(prefers-color-scheme: dark)').matches){
-      document.documentElement.classList.add('dark');
-    } else if (theme === 'system') {
+
+    if (theme === 'system' || window.matchMedia('(prefers-color-scheme: dark)').matches) {
       if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.documentElement.classList.add('dark');
       } else {
         document.documentElement.classList.remove('dark');
       }
+    } else if(theme === 'dark'){
+      document.documentElement.classList.add('dark');
     } else {
       document.documentElement.classList.remove('dark');
     }
