--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -49,7 +49,7 @@ const { title, description, image } = Astro.props
         return 'light';
     })();
 
-    if (theme === 'system' || window.matchMedia('(prefers-color-scheme: dark)').matches) {
+    if (theme === 'system') {
       if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.documentElement.classList.add('dark');
       } else {
