--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -61,7 +61,18 @@ const { title, description, image } = Astro.props
       document.documentElement.classList.remove('dark');
     }
 
-    window.localStorage.setItem('theme', theme);
+    if(theme === 'system'){
+      window.matchMedia('(prefers-color-scheme: dark)')
+            .addEventListener('change',({ matches }) => {
+        if (matches) {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      })
+    } else {
+      window.localStorage.setItem('theme', theme);
+    }
   </script>
   <body class="min-h-screen max-h-full bg-background">
     <Header />
