--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -6,7 +6,7 @@ import Webring from '@/components/layout/webring.astro'
   <div class="max-w-2xl w-full mx-auto px-4 flex h-16 items-center space-x-4 justify-between sm:space-x-0">
     <div class="flex gap-6 md:gap-10">
       <a href="/" class="flex items-center space-x-2">
-        <span class="inline-block font-normal">Shivam Shekhar Soy</span>
+        <span class="inline-block font-normal text-muted-foreground">Shivam Shekhar Soy</span>
       </a>
     </div>
     <div class="flex items-center gap-6 justify-between">
