--- a/src/components/layout/webring.astro
+++ b/src/components/layout/webring.astro
@@ -6,7 +6,7 @@ import { BiSolidRightArrow, BiSolidLeftArrow } from "react-icons/bi";
   <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=prev" class="font-mono hover:text-foreground text-muted-foreground">
     <BiSolidLeftArrow />
   </a>
-  <a target="_blank" href="https://gnulinuxindia.org/members.html/" class="text-sm hover:text-foreground text-muted-foreground hover:underline underline-offset-4">GLI WEBRING</a>
+  <a target="_blank" href="https://gnulinuxindia.org/members.html/" class="text-sm hover:text-foreground text-muted-foreground hover:underline underline-offset-4 mt-[3px]">GLI WEBRING</a>
   <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=next" class="font-mono hover:text-foreground text-muted-foreground">
     <BiSolidRightArrow />
   </a>
