--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,7 +7,7 @@ import { ModeToggle } from '@/components/layout/ModeToggle'
   <div class="max-w-2xl w-full mx-auto px-4 flex h-16 items-center space-x-4 justify-between sm:space-x-0">
     <div class="flex gap-6 md:gap-10">
       <a href="/" class="flex items-center space-x-2">
-        <span class="inline-block font-bold">SamIsTheFBI</span>
+        <span class="inline-block font-bold tracking-tighter">SamIsTheFBI</span>
       </a>
     </div>
     <div class="flex items-center gap-6 justify-between">
