--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const title = "Home | SamIsTheFBI"
         decoding="async"
       />
       <div>
-        <h1 class="text-xl sm:text-4xl font-bold">Shivam Shekhar Soy</h1>
+        <h1 class="text-xl sm:text-4xl font-bold tracking-tighter">Shivam Shekhar Soy</h1>
         <p class="max-md:text-sm text-muted-foreground">Programmer. Artist. Certified Weeb.</p>
       </div>
     </div>
