--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,4 +1,5 @@
 ---
+import '@/styles/globals.css'
 import Footer from "@/components/layout/Footer.astro"
 import Header from "@/components/layout/Header.astro"
 import { ViewTransitions, fade } from "astro:transitions"
@@ -39,40 +40,50 @@ const { title, description, image } = Astro.props
 	</head>
 
   <script is:inline>
-    const theme = (() => {
+
+    function setTheme(document) {
+      let theme = checkTheme()
+      // console.log("Theme: ", theme)
+
+      if(theme === 'system') {
+         if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
+           document.documentElement.classList.add('dark');
+         } else {
+           document.documentElement.classList.remove('dark');
+         }
+      }
+
+      if(theme === 'system') {
+       window.matchMedia('(prefers-color-scheme: dark)')
+             .addEventListener('change',({ matches }) => {
+         if (matches) {
+           document.documentElement.classList.add('dark');
+         } else {
+           document.documentElement.classList.remove('dark');
+         }
+       })
+      } else if(theme === 'dark') {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    }
+
+    function checkTheme() {
       if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
         return localStorage.getItem('theme');
       }
       if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         return 'dark';
       }
-        return 'light';
-    })();
-
-    if (theme === 'system') {
-      if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        document.documentElement.classList.add('dark');
-      } else {
-        document.documentElement.classList.remove('dark');
-      }
-    } else if(theme === 'dark'){
-      document.documentElement.classList.add('dark');
-    } else {
-      document.documentElement.classList.remove('dark');
+      return 'light';
     }
 
-    if(theme === 'system'){
-      window.matchMedia('(prefers-color-scheme: dark)')
-            .addEventListener('change',({ matches }) => {
-        if (matches) {
-          document.documentElement.classList.add('dark');
-        } else {
-          document.documentElement.classList.remove('dark');
-        }
-      })
-    } else {
-      window.localStorage.setItem('theme', theme);
-    }
+    setTheme(document)
+    document.addEventListener('astro:before-swap', ev => {
+      setTheme(ev.newDocument)
+    });
+
   </script>
   <body class="min-h-screen max-h-full bg-background">
     <Header />
