--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const title = "Home | SamIsTheFBI"
       />
       <div>
         <h1 class="text-xl sm:text-4xl font-bold tracking-tighter">Shivam Shekhar Soy</h1>
-        <p class="max-md:text-sm text-muted-foreground">Programmer. Artist. Certified Weeb.</p>
+        <p class="max-md:text-sm text-muted-foreground">Programmer. Artist. <a href="/extras" class="">Certified Weeb.</a></p>
       </div>
     </div>
   </section>
