feat: add about page, change resume link

--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -1,6 +1,6 @@
 <nav class="flex gap-6 items-center">
   <a
-    href="https://drive.google.com/file/d/1syWr-chgvH2kG-zps-kOX4Zf9CcwrkSG/view?usp=sharing"
+    href="https://drive.google.com/drive/u/1/folders/18bJ8cmpP-lTkfsk-jyjgF6sCzTDtE8-t"
     target="_blank"
     class="text-sm font-medium text-muted-foreground hover:text-foreground"
   >
