--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -12,7 +12,7 @@ import { ModeToggle } from '@/components/layout/ModeToggle'
     </div>
     <div class="flex items-center gap-6 justify-between">
       <Navbar />
-      <ModeToggle client:only />
+      <ModeToggle client:only="react" />
     </div>
   </div>
 </header>
