--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -11,17 +11,17 @@ const { title, description, link, live, tech } = Astro.props
   <div class="flex justify-between items-center gap-1">
     <span class="font-bold">{title}</span>
   </div>
-  <p class="text-sm">
+  <p class="text-sm text-foreground/80">
     {description}
   </p>
   <div class="flex justify-between gap-1">
   {
     tech &&
-    <ul class="flex gap-2">
+    <ul class="flex">
       {tech.map((item: string) => (
         <Icon 
           name=`simple-icons:${item}` 
-          class="size-6 rounded-sm p-1"
+          class="size-6 rounded-sm p-1 dark:text-muted-foreground/45 text-muted-foreground"
           title=`${item.charAt(0).toUpperCase() + item.slice(1)}`
         />
       ))}
