style(css): pimp my page with gradient

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -7,7 +7,7 @@ const { title, description, link, live, tech } = Astro.props
 ---
 
 <div class="px-5 py-3 rounded-md border space-y-3 h-full w-full 
-  bg-card text-card-foreground dark:hover:bg-secondary/35">
+  bg-card/55 text-card-foreground hover:bg-secondary/35">
   <div class="flex justify-between items-center gap-1">
     <span class="font-bold">{title}</span>
   </div>
