--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -3,11 +3,11 @@ import Navbar from "@/components/layout/Navbar.astro"
 import { ModeToggle } from '@/components/layout/ModeToggle'
 ---
 
-<header class="overflow-hidden h-16 sticky top-0 z-50 w-full border-b bg-background">
+<header class="overflow-hidden h-16 top-0 w-full border-b border-border/15 bg-background/15 backdrop-blur">
   <div class="max-w-2xl w-full mx-auto px-4 flex h-16 items-center space-x-4 justify-between sm:space-x-0">
-    <div class="flex gap-6 md:gap-10">
+    <div class="flex gap-6">
       <a href="/" class="flex items-center space-x-2">
-        <span class="inline-block font-bold tracking-tighter">SamIsTheFBI</span>
+        <span class="font-bold tracking-tighter">SamIsTheFBI</span>
       </a>
     </div>
     <div class="flex items-center gap-6 justify-between">
