--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -2,7 +2,7 @@
   <a
     href="https://drive.google.com/drive/u/1/folders/18bJ8cmpP-lTkfsk-jyjgF6sCzTDtE8-t"
     target="_blank"
-    class="text-sm font-medium text-muted-foreground hover:text-foreground"
+    class="text-sm font-medium dark:text-muted-foreground hover:text-foreground"
   >
     Resume
   </a>
