style(css): hover bg for github link

--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -4,7 +4,7 @@ import { FaGithub, FaLinkedin, FaXTwitter, FaInstagram, FaEnvelope } from "react
 import Bsky from "@/assets/bluesky.svg"
 ---
 
-<a target="_blank" href="https://github.com/samisthefbi/" class="border px-2 py-1 rounded-md hover:bg-background/55 bg-card/55">
+<a target="_blank" href="https://github.com/samisthefbi/" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaGithub />
 </a>
 <a target="_blank" href="https://www.linkedin.com/in/shivam-shekhar-soy/" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
