add uses link in /about

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -59,5 +59,8 @@ const title = "About | SamIsTheFBI"
       anime, and some books. I won’t try to bring that up in a conversation unless someone genuinely asks me to. I will update this site with my recommendation list someday. If you read 
       this much, thank you for visiting this corner of internet.
     </p>
+    <ul>
+      <li class="list-disc list-inside underline underline-offset-4 hover:font-bold"><a href="/uses">Tech I Use</a></li>
+    </ul>
   </section>
 </Base>
