--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -2,7 +2,7 @@
 import Base from "@/layouts/Base.astro"
 import { Image } from 'astro:assets'
 
-const title = "Home | SamIsTheFBI"
+const title = "Uses | SamIsTheFBI"
 ---
 
 <Base title={title} description="Fancy home page">
