--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -7,13 +7,15 @@ const { title, description, link, live, tech } = Astro.props
 ---
 
 <div class="px-5 py-3 rounded-md border space-y-3 h-full w-full 
-  bg-card/55 text-card-foreground hover:bg-secondary/35">
-  <div class="flex justify-between items-center gap-1">
-    <span class="font-bold">{title}</span>
+  bg-card/55 text-card-foreground hover:bg-secondary/35 flex flex-col justify-between">
+  <div class="space-y-2">
+    <div class="flex justify-between items-center gap-1">
+      <span class="font-bold">{title}</span>
+    </div>
+    <p class="text-sm text-foreground/80">
+      {description}
+    </p>
   </div>
-  <p class="text-sm text-foreground/80">
-    {description}
-  </p>
   <div class="flex justify-between gap-1">
   {
     tech &&
