--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,16 @@ const title = "Home | SamIsTheFBI"
       <ul class="grid grid-cols-1 gap-x-4 gap-y-3 sm:grid-cols-2">
         <li>
           <ProjectCard 
+            title="MUNSOC NIT Agartala" 
+            description="Created the blog side of the website, all with a full fledged dashboard for authors & admins." 
+            live="https://munsoc.in/"
+            tech={['nextdotjs', 'tailwindcss', 'typescript', 'shadcnui', 'supabase']}
+          />
+        </li>
+        <li>
+          <ProjectCard 
             title="Supablog" 
-            description="A fullstack blog with CMS built with Next14 + Tiptap Editor + ShadcnUI + UploadThing" 
+            description="A fullstack blog with CMS built with Next14 + Tiptap Editor + ShadcnUI + UploadThing." 
             link="https://github.com/SamIsTheFBI/supablog"
             live="https://supablog-xi.vercel.app/"
             tech={['nextdotjs', 'tailwindcss', 'typescript', 'shadcnui', 'supabase']}
