chore: add word

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const title = "Home | SamIsTheFBI"
         <li>
           <ProjectCard 
             title="MUNSOC NIT Agartala" 
-            description="Created the blog side of the website, all with a full fledged dashboard for authors & admins." 
+            description="Created the blog side of the website, all with a full fledged dashboard & text editor for authors & admins." 
             live="https://munsoc.in/"
             tech={['nextdotjs', 'tailwindcss', 'typescript', 'shadcnui', 'supabase']}
           />
