--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -27,6 +27,9 @@ const title = "Uses | SamIsTheFBI"
           than phone calls, UPI payments & college stuff. And to occasionally play DS
           games on it.
         </li>
+        <li>
+          I gave in to IEMs and currently use <a href="https://conceptkart.com/products/kz-edx-pro-wired-iem?variant=39421778788426" class="link">KZ EDX Pro</a>. I needed a long-lasting and an L-shaped 3.5mm jack. I get all of this at price cheaper than TWS earbuds. Sound quality is great but I really don&apos;t mind since my lifestyle doesn&apos;t allow me easy access to lossless audio.
+        </li>
       </ul>
     </div>
     <div class="space-y-2">
