--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -1,6 +1,6 @@
 <nav class="flex gap-6 items-center">
   <a
-    href="https://drive.google.com/drive/u/1/folders/18bJ8cmpP-lTkfsk-jyjgF6sCzTDtE8-t"
+    href="/resume.pdf"
     target="_blank"
     class="text-sm font-medium text-muted-foreground hover:text-foreground"
   >
