--- a/src/components/home/Links.astro
+++ b/src/components/home/Links.astro
@@ -4,21 +4,23 @@ import { FaGithub, FaLinkedin, FaXTwitter, FaInstagram, FaEnvelope } from "react
 import Bsky from "@/assets/bluesky.svg"
 ---
 
-<a target="_blank" href="https://github.com/samisthefbi/" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+<a target="_blank" href="https://github.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaGithub />
 </a>
-<a target="_blank" href="https://www.linkedin.com/in/shivam-shekhar-soy/" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+<a target="_blank" href="https://www.linkedin.com/in/shivam-shekhar-soy/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaLinkedin />
 </a>
-<a target="_blank" href="https://twitter.com/SamIsTheFBI" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+<a target="_blank" href="https://twitter.com/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaXTwitter />
 </a>
-<a target="_blank" href="https://www.instagram.com/samisthefbi/" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
-  <FaInstagram />
-</a>
-<a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
-  <SiMyanimelist />
-</a>
-<a target="_blank" href="mailto:shivamshekharsoy@gmail.com" class="border px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+<a target="_blank" href="mailto:shivamshekharsoy@gmail.com" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
   <FaEnvelope />
 </a>
+<!-- 
+<a target="_blank" href="https://www.instagram.com/samisthefbi/" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+  <FaInstagram />
+</a>
+<a target="_blank" href="https://myanimelist.net/profile/SamIsTheFBI" class="px-2 py-1 rounded-md hover:bg-secondary/35 bg-card/55">
+  <SiMyanimelist />
+</a>
+-->
