--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -7,12 +7,11 @@ import { ModeToggle } from '@/components/layout/ModeToggle'
   <div class="max-w-2xl w-full mx-auto px-4 flex h-16 items-center space-x-4 justify-between sm:space-x-0">
     <div class="flex gap-6">
       <a href="/" class="flex items-center space-x-2">
-        <span class="font-bold tracking-tighter">SamIsTheFBI</span>
+        <span class="font-semibold tracking-tighter">SamIsTheFBI</span>
       </a>
     </div>
     <div class="flex items-center gap-6 justify-between">
       <Navbar />
-      <ModeToggle client:only="react" />
     </div>
   </div>
 </header>
