--- a/src/pages/uses/index.astro
+++ b/src/pages/uses/index.astro
@@ -8,13 +8,13 @@ const title = "Uses | SamIsTheFBI"
 <Base title={title} description="Fancy home page">
   <section class="space-y-6 mb-6">
     <div>
-      <h1 class="text-2xl sm:text-4xl font-bold tracking-tighter">Uses</h1>
+      <h1 class="text-2xl sm:text-4xl font-semibold tracking-tighter">Uses</h1>
       <p class="max-md:text-sm text-muted-foreground">Tech that I use.</p>
     </div>
   </section>
   <section class="space-y-6">
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-bold tracking-tighter">Gear</h1>
+      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">Gear</h1>
       <ul class="list-disc list-outside ml-4">
         <li>
           For my laptop, I use <a href="https://www.amazon.in/HP-15-6-inches-Micro-Edge-Anti-Glare-15s-eq2182AU/dp/B0B4N77Y34" class="link">HP 15s-eq2182AU</a> (16GB RAM + 512GB SSD). It&apos;s
@@ -33,7 +33,7 @@ const title = "Uses | SamIsTheFBI"
       </ul>
     </div>
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-bold tracking-tighter">Laptop Software</h1>
+      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">Laptop Software</h1>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Arch Linux + Windows 11</li>
         <li><b>Window Manager</b>: dwm (patched a lot)</li>
@@ -44,7 +44,7 @@ const title = "Uses | SamIsTheFBI"
       </ul>
     </div>
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-bold tracking-tighter">Phone Software</h1>
+      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">Phone Software</h1>
       <ul class="list-disc list-outside ml-4">
         <li><b>OS</b>: Android 10 / MIUI 11.0.4</li>
         <li><b>Launcher</b>: OLauncher</li>
@@ -55,7 +55,7 @@ const title = "Uses | SamIsTheFBI"
       </ul>
     </div>
     <div class="space-y-2">
-      <h1 class="text-lg sm:text-2xl font-bold tracking-tighter">This Website</h1>
+      <h1 class="text-lg sm:text-2xl font-semibold tracking-tighter">This Website</h1>
       <ul class="list-disc list-outside ml-4">
         <li><b>Framework</b>: Astro</li>
         <li><b>Font Face</b>: Inter</li>
