--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -2,13 +2,24 @@
 import { FaGithub } from "react-icons/fa";
 import { CiGlobe } from "react-icons/ci";
 import { Icon } from 'astro-icon/components'
+import { Image } from 'astro:assets'
 
-const { title, description, link, live, tech } = Astro.props
+const { title, description, link, img } = Astro.props
 ---
 
-<div class="px-5 py-3 rounded-md border space-y-3 h-full w-full 
-  bg-card/55 text-card-foreground hover:bg-secondary/35 flex flex-col justify-between">
-  <div class="space-y-2">
+<a href={link} target="_blank" class="rounded-md border space-y-3 h-full w-full 
+  bg-card/55 text-card-foreground hover:bg-secondary/35 flex flex-col justify-between hover:shadow-lg">
+    <Image 
+      src={img}
+      class="object-cover aspect-[4 / 3] rounded-t-md" 
+      height={960} 
+      width={1280}
+      alt={title}
+      quality={50}
+      fetchpriority="high"
+      decoding="async"
+    />
+  <div class="space-y-2 px-5 pb-3">
     <div class="flex justify-between items-center gap-1">
       <span class="font-bold">{title}</span>
     </div>
@@ -16,36 +27,4 @@ const { title, description, link, live, tech } = Astro.props
       {description}
     </p>
   </div>
-  <div class="flex justify-between gap-1">
-  {
-    tech &&
-    <ul class="flex">
-      {tech.map((item: string) => (
-        <Icon 
-          name=`simple-icons:${item}` 
-          class="size-6 rounded-sm p-1 dark:text-muted-foreground/55 text-muted-foreground"
-          title=`${item.charAt(0).toUpperCase() + item.slice(1)}`
-        />
-      ))}
-    </ul>
-  }
-  <div class="flex gap-1">
-    {
-      live && 
-    <a target="_blank" href={live} 
-      class="hover:bg-secondary p-1 rounded-sm border border-border"
-      title="Live Link">
-      <CiGlobe size={18}/>
-    </a>
-    }
-    {
-      link && 
-    <a target="_blank" href={link} 
-      class="hover:bg-secondary p-1 rounded-sm border border-border" 
-      title="Source Code">
-      <FaGithub size={18}/>
-    </a>
-    }
-  </div>
-  </div>
-</div>
+</a>
