--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -44,41 +44,20 @@ const { title, description, image } = Astro.props
   <script is:inline>
 
     function setTheme(document) {
-      let theme = checkTheme()
-      // console.log("Theme: ", theme)
-
-      if(theme === 'system') {
-         if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
-           document.documentElement.classList.add('dark');
-         } else {
-           document.documentElement.classList.remove('dark');
-         }
-      }
-
-      if(theme === 'system') {
-       window.matchMedia('(prefers-color-scheme: dark)')
-             .addEventListener('change',({ matches }) => {
-         if (matches) {
-           document.documentElement.classList.add('dark');
-         } else {
-           document.documentElement.classList.remove('dark');
-         }
-       })
-      } else if(theme === 'dark') {
-        document.documentElement.classList.add('dark');
+      if(window.matchMedia('(prefers-color-scheme: dark)').matches) {
+         document.documentElement.classList.add('dark');
       } else {
-        document.documentElement.classList.remove('dark');
+         document.documentElement.classList.remove('dark');
       }
-    }
 
-    function checkTheme() {
-      if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-        return localStorage.getItem('theme');
-      }
-      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-        return 'dark';
-      }
-      return 'light';
+      window.matchMedia('(prefers-color-scheme: dark)')
+           .addEventListener('change',({ matches }) => {
+       if (matches) {
+         document.documentElement.classList.add('dark');
+       } else {
+         document.documentElement.classList.remove('dark');
+       }
+      })
     }
 
     setTheme(document)
@@ -90,7 +69,7 @@ const { title, description, image } = Astro.props
   <body class="min-h-screen max-h-full bg-background">
     <Header />
     <main class="flex main-height">
-      <div class="mx-auto max-w-2xl p-4" transition:animate="slide">
+      <div class="mx-auto max-w-2xl p-4">
         <slot />
       </div>
     </main>
